8284315: DocTrees.getElement is inconsistent with Elements.getTypeElement